fixed navbar vertical overflow

--- a/style.css
+++ b/style.css
@@ -552,6 +552,7 @@ white-space: nowrap;
   height: 50px;
   padding: 1em;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .new-logo {
